# git-stats

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
git_stats/: __init__.py  core.py
tests/: test_git_stats.py
